fix(room-style): adjust z-index for header and create room modal

--- a/static/index.css
+++ b/static/index.css
@@ -184,8 +184,11 @@ header{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
-    z-index: 2;
+    z-index: 3;
     backdrop-filter: blur(5px);
+}
+#create-room-modal{
+    z-index: 2;
 }
 
 #modal-overlay-notif.show,
